# chess

./: .clang-format  CMakeLists.txt  CMakePresets.json  b.hpp  l.hpp  out.cpp
include/: Bitboard.hpp  Board.hpp  Color.hpp  Game.hpp  Lookup.hpp  MoveReceiver.hpp  expected.hpp
src/: main.cpp
